kargo/kargo-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: kargo-ing
  namespace: kargo
spec:
  ingressClassName: nginx
  rules:
  - host: kargo.7f000001.nip.io
    http:
      paths:
      - backend:
          service:
            name: kargo-api
            port:
              number: 443
        path: /
        pathType: Prefix
